--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>绘图</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas id="canvas" width="200" height="200"></canvas>
+    <canvas id="canvas" width="100" height="100"></canvas>
     <script>
       let canvas = document.getElementById("canvas");
       canvas.width = document.documentElement.clientWidth;
@@ -15,35 +16,40 @@
       let ctx = canvas.getContext("2d");
       ctx.fillStyle = "black";
       ctx.strokeStyle = "black";
+      ctx.lineWidth = 50;
+      ctx.lineCap = "round";
+
       let painting = false;
       let last;
 
       var isTouchDevice = "ontouchstart" in document.documentElement;
-      console.log(isTouchDevice);
-      ctx.lineWidth = 10;
-      ctx.lineCap = "round";
+
+      function drawLine(x1, y1, x2, y2) {
+        ctx.beginPath();
+        ctx.moveTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.stroke();
+      }
 
       if (isTouchDevice) {
-        canvas.ontouchstart = e => {
-          let x = e.touches[0].clientX;
-          let y = e.touches[0].clientY;
-          last = [x, y];
-        };
         canvas.ontouchmove = e => {
           let x = e.touches[0].clientX;
           let y = e.touches[0].clientY;
           drawLine(last[0], last[1], x, y);
           last = [x, y];
         };
+        canvas.ontouchstart = e => {
+          let x = e.touches[0].clientX;
+          let y = e.touches[0].clientY;
+          last = [x, y];
+        };
       } else {
         canvas.onmousedown = e => {
           painting === true;
           last = [e.clientX, e.clientY];
-          console.log(last);
         };
         canvas.onmousemove = e => {
           if (painting === true) {
-            console.log(last);
             drawLine(last[0], last[1], e.clientX, e.clientY);
             last = [e.clientX, e.clientY];
           }
@@ -51,13 +57,6 @@
         canvas.onmouseup = () => {
           painting = false;
         };
-      }
-
-      function drawLine(x1, y1, x2, y2) {
-        ctx.beginPath();
-        ctx.moveTo(x1, y1);
-        ctx.lineTo(x2, y2);
-        ctx.stroke();
       }
     </script>
   </body>
